src/objects/LSCMI__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipName>LSCMIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LSCMI_Result__c</fullName>
        <label>LSCMI Result</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSCMI_Strengths__c</fullName>
        <label>Strengths</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_1_Criminal_History__c</fullName>
        <label>Subscale 1: Criminal History</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_1_Risk_Level__c</fullName>
        <label>Subscale 1 Risk Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_2_Education_Employment__c</fullName>
        <label>Subscale 2: Education/ Employment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_2_Risk_Level__c</fullName>
        <label>Subscale 2 Risk Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_3_Family_Marital__c</fullName>
        <label>Subscale 3: Family/Marita</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_3_Risk_Level__c</fullName>
        <label>Subscale 3 Risk Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_4_Leisure_Recreation__c</fullName>
        <label>Subscale 4: Leisure/ Recreation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_5_Companions__c</fullName>
        <label>Subscale 5: Companions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_6_Alcohol_Drug_Problem__c</fullName>
        <label>Subscale 6: Alcohol/ Drug Problem</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_7_Pro_criminal_Attitude__c</fullName>
        <label>Subscale 7: Pro-criminal Attitude</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSCMI_Subscale_8_Anti_social_Pattern__c</fullName>
        <label>Subscale 8: Anti-social Pattern</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Database_Id__c</fullName>
        <label>Legacy Database Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Risk_Category__c</fullName>
        <label>Overall Risk Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_Notes__c</fullName>
        <label>Survey Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upload_Id__c</fullName>
        <label>Upload Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>aLSCMI</label>
    <nameField>
        <label>aLSCMI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aLSCMIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>